3-upload-file-using-aws-sdk

--- a/3-upload-file-using-aws-sdk/server/.env
+++ b/3-upload-file-using-aws-sdk/server/.env
@@ -1,7 +1,7 @@
 DB_URL=mongodb://localhost:27017/aws-starter
 #AWS Credentials
-ACCESS_KEY_ID=AKIAJUXDR7ZEQKJSCWCQ
-SECRET_ACCESS_KEY=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
+ACCESS_KEY_ID=xxxxxxx
+SECRET_ACCESS_KEY=xxxxxx
 #S3
 REGION=us-east-2
 AWS_BUCKET=az-aws-starter-backet
