--- a/1-create-upload-mechanism/server/.env
+++ b/1-create-upload-mechanism/server/.env
@@ -1,1 +1,1 @@
-DB_URL=mongodb://localhost:27017/brand-it
+DB_URL=mongodb+srv://<user>:<password>@cluster0.ssmxxf.mongodb.net/<dbname>?retryWrites=true&w=majority
